--- a/Exercício_CRUD_de_Produtos/Produto.html
+++ b/Exercício_CRUD_de_Produtos/Produto.html
@@ -19,7 +19,7 @@
         <form action= "Incluir_produto.php" method = POST>
             <input type="submit" value="Incluir">
         </form>
-        <form action= "Alterar_produto.php" method = POST>
+        <form action= "Alterar_produto.html" method = POST>
             <input type="submit" value="Alterar">
         </form>
         <form action= "Listar_todos.php" method = POST>
