--- a/Exercício_CRUD_de_Produtos/Alterar_produto.html
+++ b/Exercício_CRUD_de_Produtos/Alterar_produto.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<h1>Listar todos</h1>
+<h1>Alterar Produto</h1>
 <table>
     <tr>
         <form action= "Incluir_produto.php" method = POST>
@@ -26,12 +26,17 @@
             <input type="submit" value="Listar Todos">
         </form>
         <form action= "Listar_um.php" method = POST>
-            <input type="submit" value="Listar um">
+        <input type="submit" value="Listar um">
         </form>
         <form action= "Excluir.php" method = POST>
             <input type="submit" value="Excluir">
         </form>
     </tr>
 </table>
+<form action= "Alterar_produto.php" method = POST>
+    ID do produto alterado:<input type= text name= "id" value=''><br>
+    <input type="submit" value="Alterar">
+</form>
+
 </body>
 </html>
