--- a/3daw_Exercício/Home_usuario.html
+++ b/3daw_Exercício/Home_usuario.html
@@ -13,29 +13,25 @@
 </head>
 
 <body>
-<h1>Alterar Onibus</h1>
+<h1>Home Usuário</h1>
 <table>
     <tr>
-        <form action= "Criar_Onibus.php" method = POST>
+        <form action= "Criar_Usuario.php" method = POST>
             <input type="submit" value="Criar">
         </form>
-        <form action= "Alterar_OnibusVer1.php" method = POST>
+        <form action= "Alterar_Usuario.html" method = POST>
             <input type="submit" value="Alterar">
         </form>
-        <form action= "index.php" method = POST>
+        <form action= "Lista_todos_usuarios.php" method = POST>
             <input type="submit" value="Listar Todos">
         </form>
-        <form action= "Lista_um_Onibus.php" method = POST>
+        <form action= "Lista_um_usuario.php" method = POST>
             <input type="submit" value="Listar um">
+        </form>
+        <form action= "Excluir_usuario.php" method = POST>
+            <input type="submit" value="Excluir">
         </form>
     </tr>
 </table>
-<span id="ErroCadastro"></span><br>
-<form id="AltOnibus">
-    Digite a Id que deseja alterar:<input type= number name= "id" value='' id="id">
-    <input type="submit" value="Pesquisar">
-</form>
-<form id="TelaAlt"></form><br>
-<script src="js/Onibus_alterar.js"></script>
 </body>
 </html>
